--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 #container {
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
+    width: 99vw;
+    height: 98vh;
     align-content: stretch;
-    align-items: stretch;
 }
 
 #square {
-    border: 2px solid black;
-    width: 100vw;
-    height: 100vh;
+    border: 1px solid grey;
+    box-sizing: border-box;
+    margin: 0;
+    flex: 1 1 6.25%;
 }
