--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
+body {
+    display: flex;
+    justify-content: center;
+}
+
 #container {
     display: flex;
     flex-flow: row wrap;
-    width: 99vw;
+    width: 98vh;
     height: 98vh;
     align-content: stretch;
 }
@@ -11,4 +16,8 @@
     box-sizing: border-box;
     margin: 0;
     flex: 1 1 6.25%;
+}
+
+.hovered {
+    background-color: rgb(28, 28, 129);
 }
