--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,10 @@ body {
     border: 1px solid grey;
     box-sizing: border-box;
     margin: 0;
-    flex: 1 1 6.25%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    /* flex-basis: 6.25%; */
+    /* flex: 1 1 6.25%; */
 }
 
 .hovered {
